// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Generic Tiles Action mode 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-tile fd-tile--launch fd-tile--action"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__overlay"
    />
    
        
    <button
      aria-label="close button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
    >
      
                    
      <i
        class="sap-icon--decline"
        role="presentation"
      />
      
                
    </button>
    <button
      aria-label="indicator button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
      tabindex="-1"
    >
      
                    
      <i
        class="sap-icon--overflow"
        role="presentation"
      />
      
                
    </button>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content"
    >
      
            
      <span
        aria-label="Profile Image"
        class="fd-tile__profile-img"
        role="presentation"
        style="background-image: url('assets/images/avatars/profile_image.png')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer Text
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--launch fd-tile--s fd-tile--action"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__overlay"
    />
    
        
    <button
      aria-label="close button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
    >
      
                    
      <i
        class="sap-icon--decline"
        role="presentation"
      />
      
                
    </button>
    <button
      aria-label="indicator button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
      tabindex="-1"
    >
      
                    
      <i
        class="sap-icon--overflow"
        role="presentation"
      />
      
                
    </button>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content"
    >
      
            
      <span
        aria-label="Profile Image"
        class="fd-tile__profile-img"
        role="presentation"
        style="background-image: url('assets/images/avatars/profile_image.png')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Unit, Notification
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--slide fd-tile--action"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <div
      class="fd-tile__overlay"
    />
    
        
    <button
      aria-label="toggle button"
      class="fd-tile__toggle fd-tile__toggle--pause"
    />
    
        
    <button
      aria-label="close button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
    >
      
                    
      <i
        class="sap-icon--decline"
        role="presentation"
      />
      
                
    </button>
    <button
      aria-label="indicator button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
      tabindex="-1"
    >
      
                    
      <i
        class="sap-icon--overflow"
        role="presentation"
      />
      
                
    </button>
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time and Forecasted Wind Conditions Across the Globe
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--s fd-tile--slide fd-tile--action"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <div
      class="fd-tile__overlay"
    />
    
        
    <button
      aria-label="toggle button"
      class="fd-tile__toggle fd-tile__toggle--pause"
    />
    
        
    <button
      aria-label="close button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
    >
      
                    
      <i
        class="sap-icon--decline"
        role="presentation"
      />
      
                
    </button>
    <button
      aria-label="indicator button"
      class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
      tabindex="-1"
    >
      
                    
      <i
        class="sap-icon--overflow"
        role="presentation"
      />
      
                
    </button>
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time and Forecasted Wind Conditions Across the Globe
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles Badge tile 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-tile fd-tile--launch"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-badge"
    >
      Badge
    </div>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Launch tile title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content"
    >
      
            
      <span
        aria-label="Profile Image"
        class="fd-tile__profile-img"
        role="presentation"
        style="background-image: url('assets/images/avatars/profile_image.png')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--launch fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-badge"
    >
      Badge with very very very very very very very very very long text
    </div>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Launch tile title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content"
    >
      
            
      <span
        aria-label="Profile Image"
        class="fd-tile__profile-img"
        role="presentation"
        style="background-image: url('assets/images/avatars/profile_image.png')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Unit, Notification
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--feed"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-badge"
    >
      New
    </div>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Feed tile title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-tile__content-text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt magna aliqua.
        </div>
        
                
        <div
          class="fd-tile__content-byline"
        >
          About 1 minute ago
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-numeric-content"
        >
          
                    
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                        
            <div
              class="fd-numeric-content__kpi"
            >
              35
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--s fd-tile--feed"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-badge"
    >
      Badge with very very very very very very very very very long text
    </div>
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Feed tile title: Sed do eiusmod
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-tile__content-text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod.
        </div>
        
                
        <div
          class="fd-tile__content-byline"
        >
          About 1 minute ago
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-numeric-content fd-numeric-content--m"
        >
          
                    
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                        
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              9
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles Columns 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-background-color"
      />
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles Feed tile 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--feed"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-tile__content-text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt magna aliqua.
        </div>
        
                
        <div
          class="fd-tile__content-byline"
        >
          About 1 minute ago
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-numeric-content"
        >
          
                    
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                        
            <div
              class="fd-numeric-content__kpi"
            >
              35
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--s fd-tile--feed"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    >
      
            
      <div
        class="fd-tile__title"
      >
        Title: Sed do eiusmod
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        Subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-tile__content-text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod.
        </div>
        
                
        <div
          class="fd-tile__content-byline"
        >
          About 1 minute ago
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__section"
      >
        
                
        <div
          class="fd-numeric-content fd-numeric-content--m"
        >
          
                    
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                        
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              9
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__footer"
    >
      
            
      <span
        class="fd-tile__footer-text"
      >
        Footer
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles KPI tile 1`] = `
<section>
  <h4>
    KPI tile with numeric content (size L)
  </h4>
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--down"
                role="presentation"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                M
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <i
            aria-label="Refresh"
            class="fd-tile__refresh sap-icon--refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--down"
                role="presentation"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                milçM
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <i
            aria-label="Refresh"
            class="fd-tile__refresh sap-icon--refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    KPI tile with numeric content (size M)
  </h4>
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Eiusmod tempor incididunt ut labore 
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--m"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
            >
              123
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--positive"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--down"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Eiusmod tempor incididunt
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--m fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              -889
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--negative"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--up"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    KPI tile with numeric content (size S)
  </h4>
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--s"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--critical"
            >
              12
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--critical"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--down"
                role="presentation"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                %
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile fd-numeric-content--m"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--informative"
            >
              1.95
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          CAD, Current quarter
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Generic Tiles Launch tile 1`] = `
<section>
  <h4>
    Launch tile with numeric content and launch icon
  </h4>
  

  <br />
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content"
        >
          
                
          <div
            class="fd-numeric-content__launch-icon-container"
          >
            
                    
            <i
              class="fd-numeric-content__launch-icon sap-icon--line-charts"
              role="presentation"
            />
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--negative"
            >
              
                        
              <i
                class="fd-numeric-content__scale-arrow sap-icon--down"
                role="presentation"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                M
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <i
            aria-label="Refresh"
            class="fd-tile__refresh sap-icon--refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__launch-icon-container"
          >
            
                    
            <i
              class="fd-numeric-content__launch-icon sap-icon--line-charts"
              role="presentation"
            />
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
            >
              1234
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch tile with combined header and content
  </h4>
  

  <br />
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header-content"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Lorem ipsum dolor sit amet, consectetur elit
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <i
            aria-label="Refresh"
            class="fd-tile__refresh sap-icon--refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--s fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header-content"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Lorem ipsum dolor sit amet, consectetur elit
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <i
            aria-label="Refresh"
            class="fd-tile__refresh sap-icon--refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch tile (profile)
  </h4>
  

  <br />
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('assets/images/avatars/profile_image.png')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('assets/images/avatars/profile_image.png')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      

    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch tile (logo)
  </h4>
  

  <br />
  

  <div
    class="fddocs-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <img
          alt="SAP"
          class="fd-tile__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <img
          alt="SAP"
          class="fd-tile__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
</section>
`;

exports[`Storyshots Components/Generic Tiles Layout 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-background-color"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-background-color"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-background-color"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-background-color"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-background-color"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-background-color"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-background-color"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-background-color"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-background-color"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-background-color"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-background-color"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-background-color"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles Link tile 1`] = `
<section>
  <h4>
    Link tile: Floating behaviour in cozy mode
  </h4>
  

  <div
    class="fd-tile-container"
  >
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title with very very very very very very long text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Perspiciatis unde omnis iste natus error sit voluptatem
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Enim ipsam voluptatem 
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Iusto odio dignissimos ducimus
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: List behaviour in cozy mode
  </h4>
  

  <div
    class="fd-tile-container fd-tile-container--list"
  >
    
            
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title with very very very very very very long text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Very long title: Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Very long subtitle: Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Iusto odio dignissimos ducimus
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: Floating behaviour in compact mode
  </h4>
  

  <div
    class="fd-tile-container"
  >
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title with very very very very very very long text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Perspiciatis unde omnis iste natus error sit voluptatem
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Enim ipsam voluptatem
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Iusto odio dignissimos ducimus
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: List behaviour in compact mode
  </h4>
  

  <div
    class="fd-tile-container fd-tile-container--list"
  >
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Very long title: Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Very long subtitle: Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--compact fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Praesentium voluptatum deleniti atque
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: Floating behaviour in cozy mode (with badge)
  </h4>
  

  <div
    class="fd-tile-container"
  >
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title with very very very very very very long text
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Perspiciatis unde omnis iste natus error
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Enim ipsam voluptatem quia voluptas
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Accusamus dignissimos ducimus
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Facilis distinctio
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: List behaviour in cozy mode (with badge)
  </h4>
  

  <div
    class="fd-tile-container fd-tile-container--list"
  >
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Very long title: Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Very long subtitle: Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Accusamus et iusto odio dignissimos ducimus
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Facilis est et expedita distinctio
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Iusto odio dignissimos ducimus
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title-container"
        >
          
                
          <div
            class="fd-badge"
          >
            Badge
          </div>
          
                
          <div
            class="fd-tile__title"
          >
            Title: Praesentium voluptatum deleniti atque
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: Floating behaviour in cozy and action mode
  </h4>
  

  <div
    class="fd-tile-container"
  >
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title with very very very very very very long text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action is-disabled"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Disabled title: Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Enim ipsam voluptatem quia
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Iusto odio dignissimos ducimus
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Link tile: List behaviour in cozy and action mode
  </h4>
  

  <div
    class="fd-tile-container fd-tile-container--list"
  >
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title with very very very very very very long text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle with very very very very very very long text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action is-disabled"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Disabled title: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Aute irure dolor in reprehenderit in voluptate velit esse cillum
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Very long title: Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Very long subtitle: Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--line fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title: Iusto odio dignissimos ducimus
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle: Lorem ipsum dolor sit amet
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__action-container"
      >
        
            
        <button
          aria-label="indicator button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--overflow"
            role="presentation"
          />
          
            
        </button>
        
            
        <button
          aria-label="close button"
          class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
        >
          
                
          <i
            class="sap-icon--decline"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
</section>
`;

exports[`Storyshots Components/Generic Tiles Sizes 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    />
    
        
    <div
      class="fd-tile__content"
    >
      11 x 11rem
    </div>
    
        
    <div
      class="fd-tile__footer"
    />
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    />
    
        
    <div
      class="fd-tile__content"
    >
      9.25 x 9.25rem
    </div>
    
        
    <div
      class="fd-tile__footer"
    />
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Generic Tiles Slide tile 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-tile fd-tile--slide"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <button
      aria-label="toggle play button"
      class="fd-tile__toggle"
    />
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--slide fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <button
      aria-label="toggle play button"
      class="fd-tile__toggle"
    />
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--slide"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <button
      aria-label="toggle pause button"
      class="fd-tile__toggle fd-tile__toggle--pause"
    />
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time and Forecasted Wind Conditions Across the Globe
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tile fd-tile--double fd-tile--s fd-tile--slide"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__background-img"
      style="background-image: url('assets/images/backgrounds/windmills.jpg'); background-size:cover;"
    />
    
        
    <button
      aria-label="toggle pause button"
      class="fd-tile__toggle fd-tile__toggle--pause"
    />
    
        
    <div
      class="fd-tile__container"
    >
      
            
      <div
        class="fd-tile__header"
      >
        
                
        <div
          class="fd-tile__title"
        >
          Wind Map: Monitoring Real-Time and Forecasted Wind Conditions Across the Globe
        </div>
        
                
        <div
          class="fd-tile__subtitle"
        >
          SAP News
        </div>
        
            
      </div>
      
            
      <div
        class="fd-tile__footer"
      >
        
                
        <span
          class="fd-tile__footer-text"
        >
          May 14, 2020
        </span>
        
            
      </div>
      
            
      <div
        class="fd-tile__page-indicator"
      >
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot fd-tile__dot--active"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
                
        <span
          class="fd-tile__dot"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
